# oko-csp-webapp

./: .gitignore  ApiClient.cpp  ApiClient.h  CMakeLists.txt  CMakePresets.json  ComponentManager.cpp  ComponentManager.h  Init.cpp  Init.h  SpaceManager.cpp  SpaceManager.h  VisualStudio.gitignore  global.h  oko-csp-webapp.cpp  oko-csp-webapp.h
include/CSP/: version.h
lib/CSP/: ConnectedSpacesPlatform.lib  ConnectedSpacesPlatform_D.lib
